<resources>
    <string name="app_name" translatable="false">Math!Puzzles</string>
    <string name="toast_rate">Rate app</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>

    <string name="title_activity_new_game" translatable="false">New Game</string>
    <string name="choose_level_label">Choose level</string>
    <string name="board_size_label">Board Size</string>
    <string name="time_label">Time</string>
    <string name="math_problems_label">Math problems</string>
    <string name="easy_button">Easy</string>
    <string name="medium_button">Medium</string>
    <string name="hard_button">Hard</string>
    <string name="start_button">Start!</string>
    <string name="back_to_main">Menu</string>
    <string name="choose_level">Please choose a level</string>

    <string name="title_activity_game" translatable="false">Game</string>
    <string name="moves_count">Moves:</string>
    <string name="initial_moves_count" translatable="false">0</string>
    <string name="time">Time:</string>
    <string name="initial_time" translatable="false">00:00</string>
    <string name="timer_format" translatable="false">%02d:%02d</string>
    <string name="timeUp_dialog_title">Time\'s up!</string>
    <string name="timeUp_dialog_text">Too bad&#8230;</string>
    <string name="main_menu">Main Menu</string>
    <string name="try_again">Try again</string>
    <string name="you_won">You won!</string>
    <string name="youWon_dialog_text_with_time">Congrats! Moves: %1d,\nTime %02d:%02d</string>
    <string name="youWon_dialog_text_no_time">Congrats! Moves: %1d</string>
    <string name="change_level">Change Level</string>
    <string name="try_another">Try another</string>
    <string name="info_text">Solve the puzzle! Tap on a piece to move it to the blank space. You can move more than one piece at a time. You have an option in the settings to play without time. Have fun!</string>

    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="lang_label">Language:</string>
    <string name="en_lang" translatable="false">english</string>
    <string name="de_lang" translatable="false">Deutsch</string>
    <string name="bg_lang" translatable="false">български</string>
    <string name="sound_label">Sound</string>
    <string name="forTime_label">Play for time</string>
    <string name="button_theme_label">Button theme</string>
    <string name="button_theme_light">Light</string>
    <string name="button_theme_dark">Dark</string>
    <string name="toast_language_changed">Language changed to English</string>
    <string name="toast_sound_on">Sound on</string>
    <string name="toast_sound_off">Sound off</string>
    <string name="toast_time_on">Time on</string>
    <string name="toast_time_off">Time off</string>
    <string name="toast_theme_dark">Button theme dark</string>
    <string name="toast_theme_light">Button theme light</string>
    <string name="done">Done</string>

    <string name="initial_dialog_title" translatable="false">Title</string>
    <string name="initial_dialog_message" translatable="false">Message</string>
    <string name="initial_dialog_button1" translatable="false">button1</string>
    <string name="initial_dialog_button2" translatable="false">button2</string>
    <string name="initial_dialog_button3" translatable="false">button3</string>

    <string name="shared_prefs_file_name" translatable="false">prefs</string>
    <string name="key_locale" translatable="false">locale</string>
    <string name="default_locale" translatable="false">en_gb</string>
    <string name="key_sound" translatable="false">sound</string>
    <string name="key_time" translatable="false">time</string>
    <string name="key_theme" translatable="false">theme</string>
    <string name="close_dialog">Close</string>
    <string name="restart_button">Restart</string>

</resources>
