<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffda35"
    android:orientation="vertical"
    tools:context=".Game">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.90"
        android:gravity="center">

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/time"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/timeText"
            android:fontFamily="casual"
            android:text="@string/initial_time"
            android:textSize="45sp" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.50">

        <GridView
            android:id="@+id/game_board"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:horizontalSpacing="6dp"
            android:numColumns="3"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="2dp" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.95"
        android:gravity="center">

        <TextView
            android:id="@+id/movesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="casual"
            android:text="@string/moves_count"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/moves_number"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/movesText"
            android:fontFamily="casual"
            android:text="@string/initial_moves_count"
            android:textSize="45sp"
            tools:text="0" />

    </RelativeLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_weight="0.98">

        <Button
            android:id="@+id/backToNG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:minLines="1"
            android:onClick="back"
            android:text="@string/change_level" />

        <Button
            android:id="@+id/tryAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:onClick="restartActivity"
            android:text="@string/try_again" />
    </TableRow>

</LinearLayout>