<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.MainMenu">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/new_game_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="280dp"
        android:layout_height="85dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/mybutton_light"
        android:fontFamily="casual"
        android:foreground="?attr/selectableItemBackground"
        android:onClick="switchToNewGameActivity"
        android:text="@string/new_game"
        android:textColor="@color/colorAccent"
        app:layout_column="0"
        app:layout_row="1" />

    <Button
        android:id="@+id/settings_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/mybutton_light"
        android:fontFamily="casual"
        android:foreground="?attr/selectableItemBackground"
        android:onClick="switchToSettingsActivity"
        android:text="@string/settings"
        android:textColor="@color/colorAccent"
        app:layout_column="0"
        app:layout_row="2" />

    <Button
        android:id="@+id/exit_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/mybutton_light"
        android:fontFamily="casual"
        android:foreground="?attr/selectableItemBackground"
        android:onClick="quitApp"
        android:text="@string/exit"
        android:textColor="@color/colorAccent"
        app:layout_column="0"
        app:layout_row="3" />

</LinearLayout>